
2024-09-12  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* tree.c (validate_indexed_key_field): warn about ignored collating
	  sequence for non-alphanumeric keys (considers only primary keys and file
	  collating sequence for now)
	* codegen.c (output_indexed_file_key_colseq): assign collating sequence
	  for any key of alphanumeric class

2024-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): drop COB_LI_IS_LL
	  in favor of existing COB_32_BIT_LONG

2024-09-27  Simon Sobisch <simonsobisch@gnu.org>

	* plex.l, scanner.l: use noyywrap option instead of manually
	  defining related code parts
	* typeck.c (cb_tree_list_has_numeric_ref_or_field): cleanup

2024-09-25  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* typeck.c (cb_tree_is_numeric_ref_or_field)
	  (cb_tree_list_has_numeric_ref_or_field): new helper functions to check
	  whether a given item is of category numeric (edited or not)
	* typeck.c (cb_emit_incompat_data_checks): use new helper function
	* typeck.c (cb_emit_move, cb_emit_set_to): do not check for incompatible
	  data if no receiver field is of category numeric or numeric edited

2024-09-03  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_accept): always check position
	* cobc.c, flag.def: make scope optional for -fdump

2024-09-23  David Declerck <david.declerck@ocamlpro.com>

	* pplex.l (cb_text_list): prevent duplicates

2024-08-28  David Declerck <david.declerck@ocamlpro.com>

	* tree.c (char_to_precedence_idx, get_char_type_description, valid_char_order):
	  adjusted size of precedence table and gave proper precedence to U

2024-08-06  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_alphabet_name_definition): cater for national alphabet
	* typeck.c (validate_alphabet): speedup for alphabet checks
	* pplex.l (ppopen_get_file): explicit check for UTF16/UTF32 and
	  hint to use iconv

2024-08-05  Simon Sobisch <simonsobisch@gnu.org>
